# CSC746-HPC-HW1

./: CMakeLists.txt  README.md  README.txt  array_sum_timer.cpp  datafile_seq_mem_access.xlsx  random_sum_timer.cpp  simple_sum_timer.cpp  sum_run.sh
